# FocusFlow

./: .gitignore  CLAUDE.md  README.md  SOUNDS.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
.claude/: settings.local.json
docs/: EXECUTION-SUMMARY.md
docs/changelog/: ui-redesign.md
docs/plans/: 2026-01-21-focusflow-pomodoro-timer.md  2026-01-21-modern-pixel-timer-ui.md
docs/test-results/: final-verification-report.md  responsive-test.md
src/: App.vue  index.css  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  database.rs  main.rs  models.rs  sound.rs  stats.rs  timer.rs
src/components/: AppHeader.vue  AppNav.vue  CompletionAnimation.vue  ExportButton.vue  ImportButton.vue  SessionCard.vue  SessionList.vue  StatsCards.vue  TagDistribution.vue  TimerControls.vue  TimerDisplay.vue  TrendChart.vue
src/router/: index.ts
src/stores/: settings.ts  timer.ts
src/types/: database.ts
src/utils/: stats.ts
src/views/: HistoryView.vue  SettingsView.vue  StatisticsView.vue  TimerView.vue
